[gd_scene load_steps=6 format=3 uid="uid://dyw8duvfrq3mb"]

[ext_resource type="Texture2D" uid="uid://b5iofwi1qo8pt" path="res://assets/ui/fight_ui/skill_bar_ui.png" id="1_ge7uk"]
[ext_resource type="Script" path="res://scripts/UI/combat_skill_ui.gd" id="2_vqerd"]
[ext_resource type="Texture2D" uid="uid://ckxik8lsk2na5" path="res://assets/ui/party_ui/rect_frame.png" id="3_7ni60"]
[ext_resource type="Texture2D" uid="uid://7o3a8tlw6qhr" path="res://assets/ui/skills/basic_slash.png" id="4_yn2gs"]

[sub_resource type="LabelSettings" id="LabelSettings_g6dxs"]
font_size = 100
outline_size = 8
outline_color = Color(0.644509, 0, 0.0486812, 1)

[node name="skill_bar" type="TextureRect"]
offset_left = 47.0
offset_top = 803.0
offset_right = 1875.0
offset_bottom = 1049.0
texture = ExtResource("1_ge7uk")
expand_mode = 1
script = ExtResource("2_vqerd")

[node name="skill_button_1" type="TextureButton" parent="."]
z_index = 1
layout_mode = 0
offset_left = 1100.0
offset_top = 45.0
offset_right = 1250.0
offset_bottom = 195.0
texture_normal = ExtResource("3_7ni60")
ignore_texture_size = true
stretch_mode = 0

[node name="skill_icon_1" type="TextureRect" parent="skill_button_1"]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -65.0
offset_right = 65.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_yn2gs")
expand_mode = 1

[node name="skill_cooldown_1" type="Label" parent="skill_button_1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -68.5
offset_right = 56.0
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
text = "5"
label_settings = SubResource("LabelSettings_g6dxs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="skill_button_2" type="TextureButton" parent="."]
modulate = Color(0.408329, 0.408329, 0.408329, 1)
z_index = 1
layout_mode = 0
offset_left = 1300.0
offset_top = 45.0
offset_right = 1450.0
offset_bottom = 195.0
disabled = true
texture_normal = ExtResource("3_7ni60")
ignore_texture_size = true
stretch_mode = 0

[node name="skill_icon_2" type="TextureRect" parent="skill_button_2"]
visible = false
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -65.0
offset_right = 65.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_yn2gs")
expand_mode = 1

[node name="skill_cooldown_2" type="Label" parent="skill_button_2"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -68.5
offset_right = 56.0
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
text = "5"
label_settings = SubResource("LabelSettings_g6dxs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="skill_button_3" type="TextureButton" parent="."]
modulate = Color(0.407843, 0.407843, 0.407843, 1)
z_index = 1
layout_mode = 0
offset_left = 1500.0
offset_top = 45.0
offset_right = 1650.0
offset_bottom = 195.0
texture_normal = ExtResource("3_7ni60")
ignore_texture_size = true
stretch_mode = 0

[node name="skill_icon_3" type="TextureRect" parent="skill_button_3"]
visible = false
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -65.0
offset_right = 65.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_yn2gs")
expand_mode = 1

[node name="skill_cooldown_3" type="Label" parent="skill_button_3"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -68.5
offset_right = 56.0
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
text = "5"
label_settings = SubResource("LabelSettings_g6dxs")
horizontal_alignment = 1
vertical_alignment = 1
